--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
+dist/
+
+package-lock.json
 
 # testing
 /coverage
@@ -21,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea
